# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "winstr-macros"
]

[package]
name            = "winstr"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/winstr"
documentation   = "https://docs.rs/winstr"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "windows strings (BSTR only so far)"
keywords        = ["string", "bstr"]
categories      = ["encoding", "os::windows-apis"]

[package.metadata.docs.rs]
all-features    = true
targets         = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
winstr-macros   = { path = "winstr-macros", version = "0.0.0-git" }

[features]
default         = ["bstr", "display"]
bstr            = ["winstr-macros/bstr"]
display         = []



[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.0"
features = [
    # shared
    "ntdef",        # LPCWSTR
    "wtypes",       # BSTR
    "wtypesbase",   # OLECHAR

    # um
    "oleauto",      # Sys*String*
]
